src/components/Subnav/subnav.css
:host {
  display: block;
  z-index: var(--sgds-z-index-raised);
}

nav {
  background-color: var(--sgds-surface-raised);
  border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
  width: 100%;
  position: relative;
}

.subnav {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  align-items: flex-start;
}

.header-container {
  display: flex;
  align-items: flex-start;
  gap: var(--sgds-gap-md);
  width: 100%;
  padding: var(--sgds-padding-md) var(--sgds-padding-lg);
}

slot[name="header"]::slotted(*) {
  --sgds-margin-xs: var(--sgds-margin-none);
  flex: 1 1 auto;
  margin-bottom: var(--sgds-margin-xs, --sgds-margin-none);
  padding-top: var(--sgds-padding-none);
}

.subnav-toggler {
  cursor: pointer;
  transition: transform 0.2s ease-in-out;
}

.subnav-toggler:focus-visible {
  outline: var(--sgds-outline-focus);
  outline-offset: var(--sgds-outline-offset-focus);
}

.subnav:not(.collapsed) .subnav-toggler {
  transform: rotate(-180deg);
}

.subnav-nav-group {
  display: flex;
  flex: 1 1 0;
  flex-direction: column;
  width: 100%;
  align-items: flex-start;
}

.subnav-nav {
  display: none;
  flex-direction: column;
  align-items: flex-start;
  width: 100%;
  transition: transform 0.2s ease-in-out;
  overflow-y: auto;
}

.subnav-nav ::slotted(*) {
  width: 100%;
}

.subnav-actions {
  display: flex;
  flex-direction: column;
  gap: var(--sgds-gap-md);
  padding: var(--sgds-padding-md) var(--sgds-padding-lg);
  position: sticky;
  bottom: 0;
  width: 100%;
}

.no-actions {
  display: none;
}

slot[name="actions"]::slotted(*) {
  width: 100%;
}

@media screen and (max-width: 1023px) {
  .subnav.sgds-container {
    max-width: inherit;
  }
}

@media screen and (min-width: 512px) {
  .subnav-actions {
    flex-direction: row;
  }
}

@media screen and (min-width: 768px) {
  nav {
    border-bottom: var(--sgds-border-width-0);
  }

  .subnav {
    flex-direction: row;
  }

  .subnav.collapsed {
    border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
  }

  .header-container {
    padding: var(--sgds-padding-lg) var(--sgds-padding-2-xl);
  }

  .subnav-nav {
    position: absolute;
    top: 100%;
    left: 0px;
    background-color: var(--sgds-surface-raised);
    border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
  }

  .subnav-actions {
    flex-direction: row;
    align-items: center;
    padding: var(--sgds-padding-sm) var(--sgds-padding-2-xl) var(--sgds-padding-sm) var(--sgds-padding-none);
    position: inherit;
  }
}

@media screen and (min-width: 1024px) {
  nav {
    position: inherit;
    border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
  }

  .subnav {
    flex-wrap: wrap;
    gap: var(--sgds-gap-xl);
    row-gap: var(--sgds-gap-none);
  }

  .subnav.collapsed {
    border-bottom: var(--sgds-border-width-0);
  }

  .header-container {
    padding: var(--sgds-padding-none);
    width: auto;
    flex: 1;
  }

  slot[name="header"]::slotted(*) {
    padding-top: var(--sgds-padding-lg);
    white-space: nowrap;
  }

  .subnav-nav-group {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: var(--sgds-gap-xl);
    row-gap: var(--sgds-gap-none);
    flex: inherit;
    width: auto;
  }

  .subnav-nav {
    display: flex;
    flex-wrap: wrap;
    gap: var(--sgds-gap-lg);
    row-gap: 0;
    align-items: center;
    flex-direction: row;
    overflow-y: inherit;
    transition: none;
    position: inherit;
    background-color: inherit;
    border-bottom: var(--sgds-border-width-0);
    width: auto;
  }

  .subnav-nav ::slotted(*) {
    width: inherit;
  }

  .subnav-toggler {
    display: none;
  }

  .subnav-actions {
    padding: var(--sgds-padding-sm) var(--sgds-padding-none);
    width: auto;
  }

  slot[name="actions"]::slotted(*) {
    width: inherit;
  }
}

